login page update

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body
+<!-- <body
   class="h-screen overflow-hidden flex items-center justify-center"
   style="background: #29435e"
 >
@@ -34,4 +34,4 @@
       </form>
     </div>
   </div>
-</body>
+</body> -->
