--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="sticky top-0 flex items-center justify-between bg-green text-ashGray px-6 py-3 mx-auto font-normal text-lg md:text-lg"
+  class="sticky top-0 flex items-center justify-between bg-green text-ashGray px-5 py-3 mx-auto font-normal text-lg md:text-base"
 >
   <!-- <div class="flex items-center justify-between"> -->
   <!-- logo -->
@@ -9,7 +9,7 @@
 
   <!-- Menu Items -->
   <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
-    <ul class="hidden space-x-12 md:flex">
+    <ul class="hidden space-x-8 md:flex">
       <!-- accueil -->
       <li
         routerLinkActive="active"
