login page update

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -44,30 +44,30 @@
                   <hr class="mt-6 border-b-1 border-gray-400" />
                 </div>
                 <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
-                  <div class="text-gray-500 text-center mb-3 font-bold">
+                  <div class="text-gray-500 text-xl text-center mb-3 font-bold">
                     <small>CONNEXION</small>
                   </div>
                   <form>
                     <div class="relative w-full mb-3">
                       <label
-                        class="block text-gray-700 text-xs font-bold mb-2"
+                        class="block text-gray-700 text-sm font-bold mb-2"
                         for="grid-password"
                         >Email</label
                       ><input
                         type="email"
-                        class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
+                        class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring ring-greenLight w-full"
                         placeholder="Entrez votre adresse email"
                         style="transition: all 0.15s ease 0s"
                       />
                     </div>
                     <div class="relative w-full mb-3">
                       <label
-                        class="block text-gray-700 text-xs font-bold mb-2"
+                        class="block text-gray-700 text-sm font-bold mb-2"
                         for="grid-password"
                         >Password</label
                       ><input
                         type="password"
-                        class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
+                        class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring ring-greenLight w-full"
                         placeholder="Entrez votre mot de passe"
                         style="transition: all 0.15s ease 0s"
                       />
@@ -90,7 +90,7 @@
                         type="button"
                         style="transition: all 0.15s ease 0s"
                       >
-                        se connecter
+                        Connexion
                       </button>
                     </div>
                   </form>
