--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,13 +9,9 @@
 
   <!-- Menu Items -->
   <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
-    <ul class="hidden space-x-8 md:flex">
+    <ul routerLinkActive="active" class="hidden space-x-8 md:flex">
       <!-- accueil -->
-      <li
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        class=""
-      >
+      <li class="">
         <a
           routerLink="/"
           href="#"
