--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -49,13 +49,13 @@
       </div>
     </div>
     <!-- right item -->
-    <div class="text-lg w-1/3 h-96 bg-gray rounded-xl shadow-md">
+    <!-- <div class="text-lg w-1/3 h-96 bg-gray rounded-xl shadow-md">
       <h1>
         fhfjf Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eos
         corporis pariatur quas, accusantium mollitia veniam id repudiandae, nisi
         sapiente suscipit exercitationem sequi. Recusandae at magnam libero
         deleniti? Eveniet, maiores.
       </h1>
-    </div>
+    </div> -->
   </div>
 </section>
