--- a/src/app/banque-page/banque-page.component.html
+++ b/src/app/banque-page/banque-page.component.html
@@ -4,7 +4,7 @@
   <div class="container flex flex-row space-x-48 place-items-center mt-7">
     <div class="">
       <h1
-        class="text-2xl font-bold text-center text-black md:text-3xl md:text-left"
+        class="text-3xl font-semibold text-center text-black md:text-3xl md:text-left"
       >
         Liste des banques enregistrées
       </h1>
@@ -132,7 +132,53 @@
       </div>
     </div>
   </div>
-  <div *ngIf="showModal" class="opacity-25 fixed inset-0 z-40 bg-black"></div>
+  <div class="container mx-auto mt-10">
+    <!-- <mat-form-field appearance="standard">
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Mia"
+        #input
+      />
+    </mat-form-field> -->
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- libelle Column -->
+        <ng-container matColumnDef="libelleBanque">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Libellé de la banque
+          </th>
+          <td mat-cell *matCellDef="let row">{{ row.libelleBanque }}</td>
+        </ng-container>
+
+        <!-- Description Column -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Description de la banque
+          </th>
+          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <!-- <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr> -->
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
+  </div>
+
   <!-- <pre>
     {{ convertedJson }}
   </pre> -->
