--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,46 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+
+// $my-custom-level: mat.define-typography-level(
+//   $font-family: 'Inter',
+//   $font-weight: 400,
+//   $font-size: 1rem,
+//   $line-height: 1,
+//   $letter-spacing: normal,
+// );
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+ //@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$raproBank-primary: mat.define-palette(mat.$indigo-palette);
+$raproBank-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$raproBank-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$raproBank-theme: mat.define-light-theme((
+  color: (
+    primary: $raproBank-primary,
+    accent: $raproBank-accent,
+    warn: $raproBank-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($raproBank-theme);
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
@@ -13,3 +56,6 @@
 // }
 
 
+
+html, body { height: 100%; }
+* { margin: 0; font-family: "Inter" !important}
