--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,18 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@import "../node_modules/@angular/material/theming";
+
+
+$my-primary: mat-palette($mat-green, 500);
+$my-accent: mat-palette($mat-light-green, 500);
+$my-warn: mat-palette($mat-light-green, 500);
+
+$my-theme: mat-light-theme($my-primary, $my-accent, $my-warn);
+@include mat.core();
+
+@include angular-material-theme($my-theme);
+
 
 // $my-custom-level: mat.define-typography-level(
 //   $font-family: 'Inter',
@@ -15,13 +27,12 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
- //@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$raproBank-primary: mat.define-palette(mat.$indigo-palette);
-$raproBank-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$raproBank-primary: mat.define-palette($mat-green, 500);
+$raproBank-accent: mat.define-palette($mat-light-green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $raproBank-warn: mat.define-palette(mat.$red-palette);
