--- a/src/app/account-page/account-page.component.html
+++ b/src/app/account-page/account-page.component.html
@@ -64,20 +64,22 @@
         <!--body-->
         <div class="flex items-center justify-center p-9">
           <div class="mx-auto w-full max-w-[550px] bg-white">
-            <form action="">
+            <!-- Form -->
+            <form #addAccountForm="ngForm">
               <!-- libelle -->
 
               <div class="mb-5">
                 <label
-                  for="name"
+                  for="libelleCompte"
                   class="mb-3 block text-base font-medium text-black"
                 >
                   Libellé du compte
                 </label>
                 <input
+                  ngModel
+                  required=""
                   type="text"
-                  name="name"
-                  id="name"
+                  name="libelleCompte"
                   placeholder="Ex : Compte courant STSL UTB"
                   class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-green focus:shadow-md"
                 />
@@ -86,14 +88,16 @@
 
               <div class="mb-5">
                 <label
-                  for="name"
+                  for="numCompte"
                   class="mb-3 block text-base font-medium text-black"
                 >
                   Numéro de compte
                 </label>
                 <input
+                  ngModel
+                  required
                   type="text"
-                  name="name"
+                  name="numCompte"
                   id="name"
                   placeholder="Ex : 52444244520054"
                   class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-green focus:shadow-md"
@@ -101,40 +105,60 @@
               </div>
               <!-- banque -->
 
-              <div class="mb-5">
+              <div class="mb-5" ngModelGroup="banque">
                 <label
-                  for="name"
+                  for="idBanque"
                   class="mb-3 block text-base font-medium text-black"
                 >
                   Banque
                 </label>
                 <select
+                  ngModel
+                  name="idBanque"
+                  required
                   class="form-select w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-green focus:shadow-md"
                   aria-label="Default select example"
                 >
-                  <option selected>Selectionnez la banque</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option value="" disabled [selected]="">
+                    Selectionnez la banque
+                  </option>
+                  <option
+                    id="idBanque"
+                    [value]="banque.idBanque"
+                    *ngFor="let banque of banques"
+                  >
+                    {{ banque.libelleBanque }}
+                  </option>
+                  <!-- <option value="2">Two</option>
+                  <option value="3">Three</option> -->
                 </select>
               </div>
               <!-- societe -->
 
-              <div class="mb-5">
+              <div class="mb-5" ngModelGroup="societe">
                 <label
-                  for="name"
+                  for="idSociete"
                   class="mb-3 block text-base font-medium text-black"
                 >
-                  Ce compte appartient à quelle société
+                  Société
                 </label>
                 <select
+                  ngModel
+                  name="idSociete"
+                  [value]=""
                   class="form-select w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-green focus:shadow-md"
                   aria-label="Default select example"
                 >
-                  <option selected>Selectionnez la societé</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option value="" disabled [selected]="">
+                    Selectionnez la societé
+                  </option>
+                  <option
+                    id="idSociete"
+                    [value]="societe.idSociete"
+                    *ngFor="let societe of societes"
+                  >
+                    {{ societe.libelleSociete }}
+                  </option>
                 </select>
               </div>
             </form>
@@ -154,7 +178,7 @@
           <button
             class="bg-green hover:bg-greenLight text-white active:bg-emerald-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
             type="button"
-            (click)="toggleModal()"
+            (click)="addAccount(addAccountForm)"
           >
             Ajouter
           </button>
@@ -162,7 +186,56 @@
       </div>
     </div>
   </div>
-  <div *ngIf="showModal" class="opacity-25 fixed inset-0 z-40 bg-black"></div>
+  <!-- Tableau des comptes bancaires -->
+  <div class="container w-auto mx-auto mt-10">
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- libelle Column -->
+        <ng-container matColumnDef="libelleCompte">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Libellé du compte bancaire
+          </th>
+          <td mat-cell *matCellDef="let row">{{ row.libelleCompte }}</td>
+        </ng-container>
+
+        <!-- Num compte Column -->
+        <ng-container matColumnDef="numCompte">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Numéro de compte
+          </th>
+          <td mat-cell *matCellDef="let row">{{ row.numCompte }}</td>
+        </ng-container>
+
+        <!-- Societe Column -->
+        <ng-container matColumnDef="libelleSociete">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Societé</th>
+          <td mat-cell *matCellDef="let row">{{ row.libelleSociete }}</td>
+        </ng-container>
+
+        <!-- Banque Column -->
+        <ng-container matColumnDef="libelleBanque">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Banque</th>
+          <td mat-cell *matCellDef="let row">{{ row.libelleBanque }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <!-- <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr> -->
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
+  </div>
+
   <!-- <pre>
     {{ convertedJson }}
   </pre> -->
